--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -42,6 +42,7 @@ body {
 html {
   font-size: 16px;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
